--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.9",
     "@types/mongodb": "^3.5.34",
     "@types/mz": "^2.7.2",
+    "@types/stoppable": "^1.1.0",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "amqplib": "^0.6.0",
@@ -42,6 +43,7 @@
     "mongodb": "^3.6.3",
     "mz": "^2.7.0",
     "remeda": "^0.0.27",
+    "stoppable": "^1.1.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "next",
     "ws": "^7.4.1"
