--- a/packages-public/fullstack-tester/publish/package.json
+++ b/packages-public/fullstack-tester/publish/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fullstack-tester",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "",
   "scripts": {},
   "bin": {
-    "fs-tester": "./fs-tester.js"
+    "fs-tester": "./dist/fs-tester.js"
   },
   "keywords": [],
   "author": "",
