--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -20,12 +20,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/classnames": "^2.2.11",
+    "@types/mixpanel-browser": "^2.35.4",
     "@types/prismjs": "^1.16.2",
     "@types/react-select": "^3.0.10",
     "@types/tinycolor2": "^1.4.2",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
     "immer": "8.0.0",
+    "mixpanel-browser": "^2.40.1",
     "next": "^10.0.4",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
