--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "jest-watch-suspend": "^1.1.2",
     "jest-watch-typeahead": "^0.6.1",
+    "mixpanel": "^0.13.0",
     "mongodb": "^3.6.3",
     "mz": "^2.7.0",
     "remeda": "^0.0.27",
